Translate more screens

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -156,7 +156,7 @@
             "attended": "Συμμετείχε",
             "waitlisted": "Σε Λίστα Αναμονής",
             "cancelledByYou": "Ακυρώθηκε από εσάς",
-            "cancelledByStudio": "Ακυρώθηκε από το στούντιο",
+            "cancelledByStudio": "Ακυρώθηκε από την επιχείρηση",
             "noShow": "Δεν Παρουσιάστηκε",
             "pending": "Εκκρεμεί"
         }
@@ -280,7 +280,7 @@
         "monthlySubscription": "Μηνιαία Συνδρομή",
         "chooseYourPlan": "Επιλέξτε το Πλάνο σας",
         "whySubscribe": "Γιατί να κάνετε συνδρομή;",
-        "benefits": "• Εξοικονομήστε 5-10% σε σύγκριση με εφάπαξ αγορές\n• Τα credits προστίθενται στον λογαριασμό σας κάθε μήνα\n• Χρησιμοποιήστε credits για κρατήσεις σε οποιοδήποτε στούντιο-συνεργάτη\n• Οι αχρησιμοποίητες credits μεταφέρονται για έως και 3 μήνες\n• Ακυρώστε ανά πάσα στιγμή - δεν απαιτείται δέσμευση",
+        "benefits": "• Εξοικονομήστε 5-10% σε σύγκριση με εφάπαξ αγορές\n• Τα credits προστίθενται στον λογαριασμό σας κάθε μήνα\n• Χρησιμοποιήστε credits για κρατήσεις σε οποιοδήποτε επιχείρηση-συνεργάτη\n• Οι αχρησιμοποίητες credits μεταφέρονται για έως και 3 μήνες\n• Ακυρώστε ανά πάσα στιγμή - δεν απαιτείται δέσμευση",
         "selectPlan": "Επιλογή Πλάνου",
         "subscribe": "Εγγραφή",
         "cancelSubscription": "Ακύρωση Συνδρομής",
@@ -393,7 +393,7 @@
         "currentBooking": "✓ Τρέχουσα Κράτηση",
         "completed": "✓ Ολοκληρώθηκε",
         "youCancelled": "✗ Ακυρώσατε",
-        "cancelledByStudio": "✗ Ακυρώθηκε από το στούντιο",
+        "cancelledByStudio": "✗ Ακυρώθηκε από την επιχείρηση",
         "noShow": "⚠ Απουσία",
         "youreAttending": "Θα Συμμετέχετε",
         "checkedIn": "Check In",
@@ -449,13 +449,37 @@
         "title": "Χώροι",
         "venueDetails": "Λεπτομέρειες Χώρου",
         "location": "Τοποθεσία",
-        "amenities": "Ανέσεις",
+        "amenities": "Παροχές",
         "description": "Περιγραφή",
         "classes": "Μαθήματα",
         "reviews": "Κριτικές",
         "noVenues": "Δεν βρέθηκαν χώροι",
+        "unknownVenue": "Άγνωστος Χώρος",
+        "venue": "Χώρος",
+        "addressNotAvailable": "Διεύθυνση δεν είναι διαθέσιμη",
+        "noImagesAvailable": "Δεν υπάρχουν διαθέσιμες εικόνες",
+        "justArrived": "ΝΕΟΣ ΧΩΡΟΣ!",
+        "aboutTheStudio": "Σχετικά με την επιχείρηση",
+        "upcomingClasses": "Προσεχή μαθήματα",
+        "seeAll": "Δείτε όλα",
+        "seeMore": "Δείτε περισσότερα",
+        "viewAllClasses": "Προβολή όλων των μαθημάτων",
+        "alreadyBooked": "Ήδη Κρατημένο",
+        "spotsAvailable": "{{count}} διαθέσιμες θέσεις",
+        "spotsAvailable_one": "{{count}} διαθέσιμη θέση",
+        "spotsAvailable_other": "{{count}} διαθέσιμες θέσεις",
+        "contact": "Επικοινωνία",
+        "address": "Διεύθυνση",
+        "phone": "Τηλέφωνο",
+        "email": "Email",
+        "website": "Ιστοσελίδα",
+        "messageVenue": "Μήνυμα στον Χώρο",
+        "loadingVenueDetails": "Φόρτωση λεπτομερειών χώρου...",
         "viewSchedule": "Προβολή Προγράμματος",
-        "getDirections": "Λήψη Οδηγιών"
+        "getDirections": "Λήψη Οδηγιών",
+        "amenityShowers": "Ντουζ",
+        "amenityAccessible": "Προσβάσιμο",
+        "amenityMats": "Στρώματα"
     },
     "explore": {
         "title": "Εξερεύνηση",
@@ -498,9 +522,26 @@
     },
     "reviews": {
         "title": "Κριτικές",
+        "ratingAndReviews": "Αξιολόγηση & Κριτικές",
+        "loadingReviews": "Φόρτωση κριτικών...",
+        "review": "κριτική",
+        "reviews": "κριτικές",
         "writeReview": "Γράψτε μια Κριτική",
+        "reviewedRecently": "Αξιολογήθηκε",
+        "cannotReview": "Δεν Μπορείτε να Αξιολογήσετε",
+        "notEligibleToReview": "Δεν είστε επιλέξιμοι να αξιολογήσετε αυτόν τον χώρο.",
         "yourReview": "Η Κριτική σας",
         "rating": "Αξιολόγηση",
+        "ratingRequired": "Απαιτείται Αξιολόγηση",
+        "pleaseSelectRating": "Παρακαλώ επιλέξτε αξιολόγηση με αστέρια πριν υποβάλετε την κριτική σας.",
+        "reviewSubmitted": "Η Κριτική Υποβλήθηκε",
+        "reviewSubmittedMessage": "Ευχαριστούμε που αφιερώσατε χρόνο για να μοιραστείτε την εμπειρία σας! Ελέγχουμε όλες τις υποβολές για να διασφαλίσουμε την ποιότητα, οπότε η κριτική σας θα είναι ορατή σύντομα",
+        "discardReview": "Απόρριψη Κριτικής;",
+        "unsavedChanges": "Έχετε μη αποθηκευμένες αλλαγές. Είστε σίγουροι ότι θέλετε να κλείσετε;",
+        "continueWriting": "Συνέχεια Γραφής",
+        "discard": "Απόρριψη",
+        "reviewing": "Αξιολόγηση",
+        "howWouldYouRate": "Πώς θα αξιολογούσατε την εμπειρία σας;",
         "tapToRate": "Πατήστε για αξιολόγηση",
         "comment": "Σχόλιο",
         "commentPlaceholder": "Τι σας άρεσε σε αυτόν τον χώρο; Τι θα μπορούσε να βελτιωθεί;",
@@ -510,9 +551,11 @@
         "guidelinesText": "• Να είστε ειλικρινείς και χρήσιμοι σε άλλους χρήστες\n• Εστιάστε στην εμπειρία σας στον χώρο\n• Να είστε ευγενικοί και εποικοδομητικοί\n• Αποφύγετε προσωπικές επιθέσεις ή ακατάλληλο περιεχόμενο",
         "submitReview": "Υποβολή Κριτικής",
         "submitting": "Υποβολή...",
+        "submitFailed": "Αποτυχία υποβολής κριτικής. Παρακαλώ δοκιμάστε ξανά.",
         "thankYou": "Ευχαριστούμε για την κριτική σας!",
         "noReviews": "Δεν υπάρχουν ακόμη κριτικές",
         "beTheFirst": "Γίνετε ο πρώτος που θα αξιολογήσει!",
+        "beTheFirstToShare": "Γίνετε ο πρώτος που θα μοιραστεί την εμπειρία σας!",
         "helpful": "Χρήσιμο",
         "notHelpful": "Όχι χρήσιμο",
         "readMore": "Διαβάστε περισσότερα",
@@ -563,9 +606,10 @@
         "yourSchedule": "Το Πρόγραμμά σας",
         "happeningToday": "Συμβαίνουν σήμερα",
         "bestOffers": "Καλύτερες Προσφορές",
-        "newStudios": "Νέα στούντιο",
+        "newStudios": "Νέα μέρη",
         "withInstructor": "με {{instructor}}",
         "tomorrow": "Αύριο",
+        "today": "Σήμερα",
         "class": "Τάξη",
         "instructor": "Εκπαιδευτής",
         "venue": "Χώρος",
