--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -156,7 +156,7 @@
             "attended": "Attended",
             "waitlisted": "Waitlisted",
             "cancelledByYou": "Cancelled by you",
-            "cancelledByStudio": "Cancelled by studio",
+            "cancelledByStudio": "Cancelled by business",
             "noShow": "No Show",
             "pending": "Pending"
         }
@@ -454,8 +454,32 @@
         "classes": "Classes",
         "reviews": "Reviews",
         "noVenues": "No venues found",
+        "unknownVenue": "Unknown Venue",
+        "venue": "Venue",
+        "addressNotAvailable": "Address not available",
+        "noImagesAvailable": "No Images Available",
+        "justArrived": "JUST ARRIVED!",
+        "aboutTheStudio": "About the studio",
+        "upcomingClasses": "Upcoming classes",
+        "seeAll": "See all",
+        "seeMore": "See more",
+        "viewAllClasses": "View all classes",
+        "alreadyBooked": "Already Booked",
+        "spotsAvailable": "{{count}} spots available",
+        "spotsAvailable_one": "{{count}} spot available",
+        "spotsAvailable_other": "{{count}} spots available",
+        "contact": "Contact",
+        "address": "Address",
+        "phone": "Phone",
+        "email": "Email",
+        "website": "Website",
+        "messageVenue": "Message Venue",
+        "loadingVenueDetails": "Loading venue details...",
         "viewSchedule": "View Schedule",
-        "getDirections": "Get Directions"
+        "getDirections": "Get Directions",
+        "amenityShowers": "Showers",
+        "amenityAccessible": "Accessible",
+        "amenityMats": "Mats"
     },
     "explore": {
         "title": "Explore",
@@ -498,9 +522,26 @@
     },
     "reviews": {
         "title": "Reviews",
+        "ratingAndReviews": "Rating & Reviews",
+        "loadingReviews": "Loading reviews...",
+        "review": "review",
+        "reviews": "reviews",
         "writeReview": "Write a Review",
+        "reviewedRecently": "Reviewed Recently",
+        "cannotReview": "Cannot Review",
+        "notEligibleToReview": "You are not eligible to review this venue.",
         "yourReview": "Your Review",
         "rating": "Rating",
+        "ratingRequired": "Rating Required",
+        "pleaseSelectRating": "Please select a star rating before submitting your review.",
+        "reviewSubmitted": "Review Submitted",
+        "reviewSubmittedMessage": "Thank you for taking the time to share your experience! We review all submissions to ensure quality, so your review will be visible shortly",
+        "discardReview": "Discard Review?",
+        "unsavedChanges": "You have unsaved changes. Are you sure you want to close?",
+        "continueWriting": "Continue Writing",
+        "discard": "Discard",
+        "reviewing": "Reviewing",
+        "howWouldYouRate": "How would you rate your experience?",
         "tapToRate": "Tap to rate",
         "comment": "Comment",
         "commentPlaceholder": "What did you like about this venue? What could be improved?",
@@ -510,9 +551,11 @@
         "guidelinesText": "• Be honest and helpful to other users\n• Focus on your experience at the venue\n• Keep it respectful and constructive\n• Avoid personal attacks or inappropriate content",
         "submitReview": "Submit Review",
         "submitting": "Submitting...",
+        "submitFailed": "Failed to submit review. Please try again.",
         "thankYou": "Thank you for your review!",
         "noReviews": "No reviews yet",
         "beTheFirst": "Be the first to review!",
+        "beTheFirstToShare": "Be the first to share your experience!",
         "helpful": "Helpful",
         "notHelpful": "Not helpful",
         "readMore": "Read more",
@@ -566,6 +609,7 @@
         "newStudios": "New studios",
         "withInstructor": "with {{instructor}}",
         "tomorrow": "Tomorrow",
+        "today": "Today",
         "class": "Class",
         "instructor": "Instructor",
         "venue": "Venue",
