--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -168,6 +168,8 @@
             "failedToDeleteTemplate": "Αποτυχία διαγραφής προτύπου. Παρακαλώ δοκιμάστε ξανά.",
             "loadMore": "Φόρτωση Περισσότερων",
             "loadingMore": "Φόρτωση περισσότερων...",
+            "loadingTemplates": "Φόρτωση προτύπων...",
+            "loadingTemplatesDescription": "Παρακαλώ περιμένετε ενώ φορτώνουμε τα πρότυπά σας",
             "createTemplate": "Νέο Πρότυπο",
             "editTemplate": "Επεξεργασία",
             "classDetails": "Λεπτομέρειες Μαθήματος",
@@ -238,6 +240,30 @@
                 "failedToCreateTemplate": "Αποτυχία δημιουργίας προτύπου μαθήματος.",
                 "failedToUpdateTemplate": "Αποτυχία ενημέρωσης προτύπου μαθήματος.",
                 "maxBookingHoursMustBeGreater": "Οι μέγιστες ώρες κράτησης πρέπει να είναι μεγαλύτερες από τις ελάχιστες"
+            },
+            "templateCard": {
+                "noTemplateDataAvailable": "Δεν υπάρχουν διαθέσιμα δεδομένα προτύπου",
+                "openMenu": "Άνοιγμα μενού",
+                "edit": "Επεξεργασία",
+                "delete": "Διαγραφή",
+                "active": "Ενεργό",
+                "inactive": "Ανενεργό",
+                "readMore": "Δείτε περισσότερα",
+                "readLess": "Δείτε λιγότερα",
+                "templateImages": "Εικόνες Προτύπου",
+                "templateImage": "Εικόνα προτύπου",
+                "enlargedPreview": "Ευρυμένη προεπισκόπηση εικόνας προτύπου",
+                "noImagesUploaded": "Δεν έχουν ανέβει εικόνες ακόμη.",
+                "addImage": "Νέα Εικόνα",
+                "uploading": "Ανέβασμα...",
+                "preparing": "Προετοιμασία...",
+                "maxImagesError": "Μπορείτε να ανεβάσετε μέχρι 4 εικόνες ανά πρότυπο.",
+                "imageRemovedSuccess": "Η εικόνα έχει αφαιρεθεί από το πρότυπο.",
+                "failedToRemoveImage": "Αποτυχία αφαίρεσης εικόνας.",
+                "duration": "Διάρκεια",
+                "deleteImageConfirmTitle": "Είστε απολύτως σίγουροι;",
+                "deleteImageConfirmDescription": "Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Αυτό θα αφαιρέσει μόνιμα την εικόνα από το πρότυπό σας.",
+                "continue": "Συνέχεια"
             }
         },
         "earnings": {
