--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -168,6 +168,8 @@
             "failedToDeleteTemplate": "Failed to delete template. Please try again.",
             "loadMore": "Load More",
             "loadingMore": "Loading more...",
+            "loadingTemplates": "Loading templates...",
+            "loadingTemplatesDescription": "Please wait while we fetch your templates",
             "createTemplate": "Create Template",
             "editTemplate": "Edit Template",
             "classDetails": "Class Details",
@@ -238,6 +240,30 @@
                 "failedToCreateTemplate": "Failed to create class template.",
                 "failedToUpdateTemplate": "Failed to update class template.",
                 "maxBookingHoursMustBeGreater": "Maximum booking hours must be greater than minimum"
+            },
+            "templateCard": {
+                "noTemplateDataAvailable": "No template data available",
+                "openMenu": "Open menu",
+                "edit": "Edit",
+                "delete": "Delete",
+                "active": "Active",
+                "inactive": "Inactive",
+                "readMore": "Read more",
+                "readLess": "Read less",
+                "templateImages": "Template Images",
+                "templateImage": "Template image",
+                "enlargedPreview": "Enlarged preview of template image",
+                "noImagesUploaded": "No images uploaded yet.",
+                "addImage": "Add Image",
+                "uploading": "Uploading...",
+                "preparing": "Preparing...",
+                "maxImagesError": "You can upload a maximum of 4 images per template.",
+                "imageRemovedSuccess": "The image has been removed from the template.",
+                "failedToRemoveImage": "Failed to remove image.",
+                "duration": "Duration",
+                "deleteImageConfirmTitle": "Are you absolutely sure?",
+                "deleteImageConfirmDescription": "This action cannot be undone. This will permanently remove the image from your template.",
+                "continue": "Continue"
             }
         },
         "earnings": {
@@ -339,6 +365,36 @@
                 "venueUpdatedSuccess": "Venue updated successfully",
                 "failedToCreateVenue": "Failed to create venue.",
                 "failedToUpdateVenue": "Failed to update venue."
+            },
+            "venueCard": {
+                "amenities": "Amenities",
+                "noAmenitiesFound": "No amenities found",
+                "services": "Services",
+                "venueImages": "Venue Images",
+                "addImage": "Add Image",
+                "uploading": "Uploading...",
+                "preparing": "Preparing...",
+                "noImagesUploaded": "No images uploaded yet.",
+                "addressNotAvailable": "Address not available",
+                "readMore": "Read more",
+                "readLess": "Read less",
+                "edit": "Edit",
+                "delete": "Delete",
+                "openMenu": "Open menu",
+                "venueImage": "Venue image",
+                "enlargedPreview": "Enlarged preview of venue image",
+                "deleteImage": "Delete image",
+                "deleteImageConfirmTitle": "Are you absolutely sure?",
+                "deleteImageConfirmDescription": "This action cannot be undone. This will permanently remove the image from your venue.",
+                "cancel": "Cancel",
+                "continue": "Continue",
+                "noVenueDataAvailable": "No venue data available",
+                "maxImagesError": "You can upload a maximum of {{max}} images per venue.",
+                "imageRemovedSuccess": "The image has been removed from the venue.",
+                "failedToRemoveImage": "Failed to remove image.",
+                "amenityShowers": "Showers",
+                "amenityAccessible": "Accessible",
+                "amenityMats": "Mats"
             },
             "notifications": {
                 "title": "Notifications",
@@ -471,35 +527,5 @@
         "errorDetails": "Error Details (Dev Mode)",
         "tryAgain": "Try Again",
         "reloadPage": "Reload Page"
-    },
-    "venueCard": {
-        "amenities": "Amenities",
-        "noAmenitiesFound": "No amenities found",
-        "services": "Services",
-        "venueImages": "Venue Images",
-        "addImage": "Add Image",
-        "uploading": "Uploading...",
-        "preparing": "Preparing...",
-        "noImagesUploaded": "No images uploaded yet.",
-        "addressNotAvailable": "Address not available",
-        "readMore": "Read more",
-        "readLess": "Read less",
-        "edit": "Edit",
-        "delete": "Delete",
-        "openMenu": "Open menu",
-        "venueImage": "Venue image",
-        "enlargedPreview": "Enlarged preview of venue image",
-        "deleteImage": "Delete image",
-        "deleteImageConfirmTitle": "Are you absolutely sure?",
-        "deleteImageConfirmDescription": "This action cannot be undone. This will permanently remove the image from your venue.",
-        "cancel": "Cancel",
-        "continue": "Continue",
-        "noVenueDataAvailable": "No venue data available",
-        "maxImagesError": "You can upload a maximum of {{max}} images per venue.",
-        "imageRemovedSuccess": "The image has been removed from the venue.",
-        "failedToRemoveImage": "Failed to remove image.",
-        "amenityShowers": "Showers",
-        "amenityAccessible": "Accessible",
-        "amenityMats": "Mats"
     }
 }
