--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -645,7 +645,42 @@
         "title": "Εισιτήριο Κράτησης",
         "scanQR": "Σαρώστε αυτόν τον κωδικό QR στον χώρο",
         "bookingDetails": "Λεπτομέρειες Κράτησης",
-        "showAtVenue": "Δείξτε αυτό στον χώρο για check-in"
+        "showAtVenue": "Δείξτε αυτό στον χώρο για check-in",
+        "bookingUnavailable": "Η κράτηση δεν είναι διαθέσιμη",
+        "bookingUnavailableMessage": "Δεν μπορέσαμε να βρούμε τις πληροφορίες κράτησης για αυτό το εισιτήριο.",
+        "tbd": "Να καθοριστεί",
+        "status": "Κατάσταση",
+        "confirmed": "Επιβεβαιωμένο",
+        "cancelled": "Ακυρώθηκε",
+        "waitlist": "Λίστα αναμονής",
+        "dateTime": "Ημερομηνία & Ώρα",
+        "attendee": "Συμμετέχων",
+        "member": "Μέλος",
+        "lessThanMinute": "λιγότερο από ένα λεπτό",
+        "minutes": "{{count}} λεπτά",
+        "minutes_one": "{{count}} λεπτό",
+        "minutes_other": "{{count}} λεπτά",
+        "hours": "{{count}} ώρες",
+        "hours_one": "{{count}} ώρα",
+        "hours_other": "{{count}} ώρες",
+        "days": "{{count}} ημέρες",
+        "days_one": "{{count}} ημέρα",
+        "days_other": "{{count}} ημέρες",
+        "checkInUnavailable": "Το check-in δεν είναι διαθέσιμο",
+        "opensIn": "Ανοίγει σε {{time}}",
+        "checkInClosed": "Το check-in έκλεισε",
+        "dragToCheckIn": "Σύρετε για check-in",
+        "checkingIn": "Check-in...",
+        "dragToVerify": "Σύρετε το κουμπί για να επιβεβαιώσει η επιχείρηση το check-in σας.",
+        "checkInConfirmed": "Το check-in επιβεβαιώθηκε!",
+        "checkInSuccessMessage": "Έχετε κάνει check-in με επιτυχία. Καλή διασκέδαση στο μάθημά σας!",
+        "checkInFailed": "Αποτυχία check-in",
+        "checkInErrorMessage": "Προέκυψε σφάλμα κατά την επιβεβαίωση του check-in σας. Παρακαλώ δοκιμάστε ξανά ή επικοινωνήστε με την επιχείρηση.",
+        "tooEarly": "Πολύ νωρίς",
+        "tooEarlyMessage": "Το check-in ανοίγει 30 λεπτά πριν ξεκινήσει το μάθημα. Παρακαλώ δοκιμάστε ξανά αργότερα.",
+        "checkInClosedMessage": "Το παράθυρο check-in έχει κλείσει. Το check-in πρέπει να γίνει εντός 3 ωρών μετά την έναρξη του μαθήματος.",
+        "alreadyProcessed": "Έχει ήδη επεξεργαστεί",
+        "alreadyProcessedMessage": "Αυτή η κράτηση έχει ήδη επεξεργαστεί ή ακυρωθεί."
     },
     "services": {
         "gym": "Γυμναστήριο / Fitness",
