--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -645,7 +645,42 @@
         "title": "Booking Ticket",
         "scanQR": "Scan this QR code at the venue",
         "bookingDetails": "Booking Details",
-        "showAtVenue": "Show this at the venue for check-in"
+        "showAtVenue": "Show this at the venue for check-in",
+        "bookingUnavailable": "Booking unavailable",
+        "bookingUnavailableMessage": "We couldn't find the booking information for this ticket.",
+        "tbd": "TBD",
+        "status": "Status",
+        "confirmed": "Confirmed",
+        "cancelled": "Cancelled",
+        "waitlist": "Waitlist",
+        "dateTime": "Date & Time",
+        "attendee": "Attendee",
+        "member": "Member",
+        "lessThanMinute": "less than a minute",
+        "minutes": "{{count}} minutes",
+        "minutes_one": "{{count}} minute",
+        "minutes_other": "{{count}} minutes",
+        "hours": "{{count}} hours",
+        "hours_one": "{{count}} hour",
+        "hours_other": "{{count}} hours",
+        "days": "{{count}} days",
+        "days_one": "{{count}} day",
+        "days_other": "{{count}} days",
+        "checkInUnavailable": "Check-in unavailable",
+        "opensIn": "Opens in {{time}}",
+        "checkInClosed": "Check-in closed",
+        "dragToCheckIn": "Drag to check-in",
+        "checkingIn": "Checking in...",
+        "dragToVerify": "Drag the button to let the studio verify your check-in.",
+        "checkInConfirmed": "Check-in confirmed!",
+        "checkInSuccessMessage": "You've successfully checked in. Enjoy your class!",
+        "checkInFailed": "Check-in failed",
+        "checkInErrorMessage": "There was an error confirming your check-in. Please try again or contact the studio.",
+        "tooEarly": "Too early",
+        "tooEarlyMessage": "Check-in opens 30 minutes before class starts. Please try again later.",
+        "checkInClosedMessage": "The check-in window has closed. Check-in must be done within 3 hours after class starts.",
+        "alreadyProcessed": "Already processed",
+        "alreadyProcessedMessage": "This booking has already been processed or cancelled."
     },
     "services": {
         "gym": "Gym / Fitness",
