--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -250,11 +250,11 @@
                 "inactive": "Ανενεργό",
                 "readMore": "Δείτε περισσότερα",
                 "readLess": "Δείτε λιγότερα",
-                "templateImages": "Εικόνες Προτύπου",
+                "templateImages": "Φωτογραφίες",
                 "templateImage": "Εικόνα προτύπου",
                 "enlargedPreview": "Ευρυμένη προεπισκόπηση εικόνας προτύπου",
                 "noImagesUploaded": "Δεν έχουν ανέβει εικόνες ακόμη.",
-                "addImage": "Νέα Εικόνα",
+                "addImage": "Νέα φωτογραφία",
                 "uploading": "Ανέβασμα...",
                 "preparing": "Προετοιμασία...",
                 "maxImagesError": "Μπορείτε να ανεβάσετε μέχρι 4 εικόνες ανά πρότυπο.",
