Update packages versions

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -606,7 +606,7 @@
         "yourSchedule": "Το Πρόγραμμά σας",
         "happeningToday": "Συμβαίνουν σήμερα",
         "bestOffers": "Καλύτερες Προσφορές",
-        "newStudios": "Νέα μέρη",
+        "newStudios": "Νέες εμπειρίες",
         "withInstructor": "με {{instructor}}",
         "tomorrow": "Αύριο",
         "today": "Σήμερα",
