Add google studio ai key

--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -502,6 +502,7 @@
             "actionBooked": "έκανε κράτηση",
             "actionCancelled": "ακύρωσε",
             "actionPaidFor": "πλήρωσε για",
+            "actionVenueReviewed": "αξιολόγησε",
             "actionUpdated": "ενημερώθηκε"
         },
         "onboarding": {
