--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -477,6 +477,7 @@
             "actionBooked": "booked",
             "actionCancelled": "cancelled",
             "actionPaidFor": "paid for",
+            "actionVenueReviewed": "reviewed",
             "actionUpdated": "updated"
         },
         "onboarding": {
