Improve bookings and earnings page

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -403,7 +403,7 @@
         "rebooking": "Επανακράτηση...",
         "tapToRebook": "Πατήστε για επανακράτηση αυτού του μαθήματος",
         "didntShowUp": "Δεν εμφανίστηκες σε αυτό το μάθημα",
-        "cannotBookAgain": "Δεν μπορείτε να κάνετε κράτηση αυτού του μαθήματος ξανά",
+        "cannotBookAgain": "Δεν μπορείτε να κάνετε κράτηση ξανά.",
         "bookClass": "Κράτηση Μαθήματος",
         "booking": "Κράτηση…",
         "spendCredits": "Ξόδεψε {{credits}} credits",
