--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -285,15 +285,15 @@
             "averagePerBooking": "Μέσος όρος ανά κράτηση",
             "totalLifetimeRevenue": "Συνολικά έσοδα βιογραφικού",
             "bookingDetails": "Λεπτομέρειες Κρατήσεων",
-            "bookingDetailsDescription": "Αναλυτική ανάλυση όλων των κρατήσεων μαθημάτων και εσόδων. Οι εγγραφές εμφανίζονται μετά την ολοκλήρωση του μαθήματος.",
+            "bookingDetailsDescription": "Αναλυτική ανάλυση όλων των κρατήσεων μαθημάτων και εσόδων. Οι εγγραφές εμφανίζουν όλες τις κρατήσεις όπου κέρδισε έσοδα.",
             "noBookingsFound": "Δεν βρέθηκαν κρατήσεις για",
             "totalMonthlyEarnings": "Συνολικά Μηνιαία Έσοδα",
             "tableDate": "Ημερομηνία",
             "tableClassName": "Όνομα Μαθήματος",
             "tableConsumer": "Πελάτης",
-            "tableGrossPrice": "Ακαθάριστη Τιμή",
-            "tableSystemCut": "Προμήθεια Συστήματος",
-            "tableYourEarnings": "Τα Έσοδά σας",
+            "tablePrice": "Τιμή",
+            "tablePlatformFee": "Προμήθεια Πλατφόρμας",
+            "tableEarnings": "Έσοδα",
             "tableStatus": "Κατάσταση"
         },
         "settings": {
