--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -285,15 +285,15 @@
             "averagePerBooking": "Average per booking",
             "totalLifetimeRevenue": "Total lifetime revenue",
             "bookingDetails": "Booking Details",
-            "bookingDetailsDescription": "Detailed breakdown of all class bookings and earnings. Records appear after the class has been completed.",
+            "bookingDetailsDescription": "Detailed breakdown of all class bookings and earnings. Records show all bookings where revenue was earned.",
             "noBookingsFound": "No bookings found for",
             "totalMonthlyEarnings": "Total Monthly Earnings",
             "tableDate": "Date",
             "tableClassName": "Class Name",
             "tableConsumer": "Consumer",
-            "tableGrossPrice": "Gross Price",
-            "tableSystemCut": "System Cut",
-            "tableYourEarnings": "Your Earnings",
+            "tablePrice": "Price",
+            "tablePlatformFee": "Platform Fee",
+            "tableEarnings": "Earnings",
             "tableStatus": "Status"
         },
         "settings": {
