Imrpove map modals

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -176,6 +176,12 @@
             "dataDescription": "Διαχειριστείτε τα δεδομένα και την αποθήκευση σας",
             "deleteAccount": "Διαγραφή Λογαριασμού",
             "deleteDescription": "Μόνιμη διαγραφή του λογαριασμού σας",
+            "deleteConfirmationTitle": "Διαγραφή Λογαριασμού",
+            "deleteConfirmationWarning": "Αυτή η ενέργεια δεν μπορεί να αναιρεθεί. Όλα τα δεδομένα, οι κρατήσεις και τα credits σας θα διαγραφούν οριστικά.",
+            "deleteInstruction": "Παρακαλώ πληκτρολογήστε <bold>{{text}}</bold> για επιβεβαίωση.",
+            "deletePlaceholder": "Διαγραφή λογαριασμού",
+            "deleteButton": "Διαγραφή Λογαριασμού",
+            "deleteTimelineInfo": "Ο λογαριασμός σας θα απενεργοποιηθεί αμέσως και θα σημειωθεί για διαγραφή. Θα διαγράψουμε οριστικά όλα τα δεδομένα σε 7 ημέρες, εκτός αν εγγραφείτε ξανά με το ίδιο email μέσα σε αυτό το διάστημα.",
             "comingSoon": "Η διαχείριση λογαριασμού έρχεται σύντομα"
         },
         "language": {
