Implement soft delete account and cron job to delete

--- a/apps/mobile-consumer/src/locales/el/translation.json
+++ b/apps/mobile-consumer/src/locales/el/translation.json
@@ -182,6 +182,7 @@
             "deletePlaceholder": "Διαγραφή λογαριασμού",
             "deleteButton": "Διαγραφή Λογαριασμού",
             "deleteTimelineInfo": "Ο λογαριασμός σας θα απενεργοποιηθεί αμέσως και θα σημειωθεί για διαγραφή. Θα διαγράψουμε οριστικά όλα τα δεδομένα σε 7 ημέρες, εκτός αν εγγραφείτε ξανά με το ίδιο email μέσα σε αυτό το διάστημα.",
+            "activeSubscriptionError": "Παρακαλώ ακυρώστε τη συνδρομή σας πριν διαγράψετε τον λογαριασμό σας. Μπορείτε να διαχειριστείτε τη συνδρομή σας στις ρυθμίσεις του λογαριασμού σας.",
             "comingSoon": "Η διαχείριση λογαριασμού έρχεται σύντομα"
         },
         "language": {
