Improve Venue details page

--- a/apps/mobile-consumer/src/locales/en/translation.json
+++ b/apps/mobile-consumer/src/locales/en/translation.json
@@ -488,7 +488,9 @@
         "getDirections": "Get Directions",
         "amenityShowers": "Showers",
         "amenityAccessible": "Accessible",
-        "amenityMats": "Mats"
+        "amenityMats": "Mats",
+        "noAmenitiesFound": "No amenities found",
+        "noUpcomingClassesFound": "No upcoming classes found"
     },
     "explore": {
         "title": "Explore",
