--- a/apps/web-business/src/locales/el.json
+++ b/apps/web-business/src/locales/el.json
@@ -29,6 +29,10 @@
         "price": "Τιμή",
         "capacity": "Χωρητικότητα",
         "duration": "Διάρκεια",
+        "minutes": "{{count}} λεπτά",
+        "hour": "{{count}} ώρα",
+        "hours": "{{count}} ώρες",
+        "hourMinutes": "{{hours}} {{minutes}}",
         "instructor": "Εκπαιδευτής",
         "category": "Κατηγορία",
         "required": "Απαιτείται",
