--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -29,6 +29,10 @@
         "price": "Price",
         "capacity": "Capacity",
         "duration": "Duration",
+        "minutes": "{{count}} minutes",
+        "hour": "{{count}} hour",
+        "hours": "{{count}} hours",
+        "hourMinutes": "{{hours}} {{minutes}}",
         "instructor": "Instructor",
         "category": "Category",
         "required": "Required",
