--- a/apps/web-business/src/locales/en.json
+++ b/apps/web-business/src/locales/en.json
@@ -26,6 +26,7 @@
         "zipCode": "Zip Code",
         "country": "Country",
         "description": "Description",
+        "shortDescription": "Short Description (optional)",
         "price": "Price",
         "capacity": "Capacity",
         "duration": "Duration",
